<resources>
    <!-- General -->
    <string name="app_name" translatable="false">MyWallet</string>

    <!-- Words without context -->
    <string name="save">Save</string>

    <!-- Drawer & Navigation -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_logo" translatable="false">App logo</string>
    <string name="navigation_home">Home</string>

    <!-- Home -->
    <string name="home_title" translatable="false">Home</string>
    <string name="home_balance">Balance</string>
    <string name="home_balanceIn">Entrances</string>
    <string name="home_balanceOut">Expenses</string>
    <string name="home_expense">Expense</string>
    <string name="home_expenseToday">Today</string>
    <string name="home_expenseYesterday">Yesterday</string>
    <string name="home_expenseThisWeek">This week</string>
    <string name="home_expenseThisMonth">This month</string>

    <!-- Add transaction -->
    <string name="addTransaction_title">Add transaction</string>
    <string name="confirmExit_dialog_title">Discard changes?</string>
    <string-array name="addTransaction_input_transactionType">
        <item>Expense</item>
        <item>Incoming</item>
    </string-array>
    <string name="addTransaction_input_category_hint">Category</string>
    <string name="addTransaction_input_amount_hint">Amount</string>
    <string name="addTransaction_input_paymentType_hint">Payment type</string>
    <string name="addTransaction_input_currency_hint">Currency</string>
    <string name="addTransaction_input_notes_hint">Note</string>
    <string name="addTransaction_ok">Transaction saved</string>
    <string name="addTransaction_error">Error during transaction saving</string>
    <string name="addTransaction_amountError">Invalid amount</string>

    <!-- Transactions -->
    <string name="transactions_title">Transactions</string>

    <!-- Edit transaction -->
    <string name="editTransaction_title">Edit</string>
    <string name="editTransaction_save">Save</string>
    <string name="editTransaction_ok">Changes saved</string>
    <string name="editTransaction_error">Error during saving</string>
    <string name="deleteTransaction_title">Delete</string>
    <string name="deleteTransaction_description">Are you sure you want to delete this transaction?</string>
    <string name="deleteTransaction_ok">Transaction deleted</string>
    <string name="deleteTransaction_error">Error during transaction deleting</string>

    <!-- Categories -->
    <string name="categories_title">Categories</string>
    <string name="addCategory_dialog_title">Add category</string>
    <string name="addCategory_input_name_hint">Name</string>
    <string name="addCategory_ok">Category added</string>
    <string name="addCategory_error">Error during category adding</string>
    <string name="deleteCategory_title">Delete category</string>
    <string name="deleteCategory_description">Are you sure you want to delete this category?</string>
    <string name="deleteCategory_ok">Category deleted</string>
    <string name="deleteCategory_error">Error during deleting</string>

    <!-- Import/Export -->
    <string name="import_title">Import</string>
    <string name="export_title">Export</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_currency_title">Currency</string>
    <string name="settings_currency_list_title">Preferred currency</string>
    <string name="settings_currency_update_title">Last currency rates update</string>
    <string name="settings_data_title">Data management</string>
    <string name="settings_data_deleteAll_title">Clear all saved data</string>
    <string name="settings_data_deleteAll_description">All movements, statistics or preferences will be deleted from this device</string>
    <string name="dialog_confirmDelete_title">Delete all data</string>
    <string name="dialog_confirmDelete_description">All application data or preferences will be deleted from this device. This action can not be canceled.</string>
    <string name="deleteAll_ok">All data were deleted</string>

    <!-- Payment types -->
    <string-array name="payment_types">
        <item>Cash</item>
        <item>Debit card</item>
        <item>Credit card</item>
        <item>Bank transfer</item>
        <item>Web payment</item>
    </string-array>

    <!-- Currencies -->
    <string-array name="currency_names">
        <item>Euro (EUR)</item>
        <item>US Dollar (USD)</item>
        <item>Japanese Yen (JPY)</item>
        <item>Bulgarian Lev (BGN)</item>
        <item>Czech Koruna (CZK)</item>
        <item>Danish Krone (DKK)</item>
        <item>Pound Sterling (GBP)</item>
        <item>Hungarian Forint (HUF)</item>
        <item>Polish Zloty (PLN)</item>
        <item>Romanian Leu (RON)</item>
        <item>Swedish Krona (SEK)</item>
        <item>Swiss Franc (CHF)</item>
        <item>Icelandic Krona (ISK)</item>
        <item>Norwegian Krone (NOK)</item>
        <item>Croatian Kuna (HRK)</item>
        <item>Russian Rouble (RUB)</item>
        <item>Turkish Lira (TRY)</item>
        <item>Australian Dollar (AUD)</item>
        <item>Brazilian Real (BRL)</item>
        <item>Canadian Dollar (CAD)</item>
        <item>Chinese Yuan Renminbi (CNY)</item>
        <item>Hong Kong Dollar (HKD)</item>
        <item>Indonesian Rupiah (IDR)</item>
        <item>Israeli Shekel (ILS)</item>
        <item>Indian rupee (INR)</item>
        <item>South Korean Won (KRW)</item>
        <item>Mexican Peso (MXN)</item>
        <item>Malaysian Ringgit (MYR)</item>
        <item>New Zealand Dollar (NZD)</item>
        <item>Philippine Piso (PHP)</item>
        <item>Singapore Dollar (SGD)</item>
        <item>Thai Baht (THB)</item>
        <item>South African Rand (ZAR)</item>
    </string-array>
    <string-array name="currency_codes">
        <item>EUR</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ISK</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>SGD</item>
        <item>THB</item>
        <item>ZAR</item>
    </string-array>

</resources>
