<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_currency_title"
        android:key="settings_currency">

        <ListPreference
            android:defaultValue="EUR"
            android:entries="@array/currency_names"
            android:entryValues="@array/currency_codes"
            android:key="preferred_currency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_currency_list_title" />

        <Preference
            android:key="settings_currency_update"
            android:title="@string/settings_currency_update_title"
            android:summary="@null" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_data_title"
        android:key="settings_data">

        <Preference
            android:key="settings_data_deleteAll"
            android:title="@string/settings_data_deleteAll_title"
            android:summary="@string/settings_data_deleteAll_description" />

    </PreferenceCategory>

</PreferenceScreen>
