<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="88dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                tools:style="@style/CardView"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <android.support.v7.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            card_view:cardElevation="0dp"
                            card_view:cardBackgroundColor="@color/secondary"
                            card_view:cardCornerRadius="20dp">
                            <android.support.v7.widget.AppCompatImageView
                                xmlns:app="http://schemas.android.com/apk/lib/wallet"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                card_view:srcCompat="@drawable/ic_attach_money_white_24dp" />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:alpha=".87"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:text="@string/home_balance" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:textAlignment="center"
                        android:textSize="45sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:id="@+id/balance_in"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="16dp"
                            android:textAlignment="center"
                            android:textColor="@color/green"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/balance_out"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="16dp"
                            android:textAlignment="center"
                            android:textColor="@color/red"
                            android:textSize="15sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="16dp"
                            android:text="@string/home_balanceIn"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="16dp"
                            android:text="@string/home_balanceOut"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                tools:style="@style/CardView"
                android:layout_margin="8dp"
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <android.support.v7.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            card_view:cardElevation="0dp"
                            card_view:cardBackgroundColor="@color/secondary"
                            card_view:cardCornerRadius="20dp">
                            <android.support.v7.widget.AppCompatImageView
                                xmlns:app="http://schemas.android.com/apk/lib/wallet"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                card_view:srcCompat="@drawable/ic_insert_chart_white_24dp" />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:alpha=".87"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:text="@string/home_expense" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/home_expenseToday" />
                        <TextView
                            android:id="@+id/expense_today"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:textColor="@color/red" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/home_expenseYesterday" />
                        <TextView
                            android:id="@+id/expense_yesterday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:textColor="@color/red" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/home_expenseThisWeek" />
                        <TextView
                            android:id="@+id/expense_this_week"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:textColor="@color/red" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/home_expenseThisMonth" />
                        <TextView
                            android:id="@+id/expense_this_month"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:textColor="@color/red" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addTransactionFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/secondary"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</android.support.design.widget.CoordinatorLayout>


